feat: TCP/HTTP代理配置、IP CIDR访问控制管理CRUD接口